[package]
name = "asteroid-colonies-logic"
version = "0.1.0"
edition = "2021"
description = "Common logic between the server and the frontend"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
fnv = "1.0.7"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.84" }
