[package]
name = "asteroid-colonies-server"
version = "0.1.0"
edition = "2021"
authors = ["msakuta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asteroid-colonies-logic = { path = "../game-logic" }
actix = "0.13.0"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-cors = "0.7.0"
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
actix-tls = { version = "3.3.0" }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.8.5"
anyhow = "1.0.80"
bincode = "1.3.3"
openssl = "0.10.64"

[package.metadata.deb]
assets = [
    ["target/release/asteroid-colonies-server", "usr/bin/", "755"],
    ["../dist/js/assets/*", "usr/share/asteroid-colonies/js/assets", "644"],
    ["../dist/js/*", "usr/share/asteroid-colonies/js", "644"],
]
